# sage

./: .gitignore  CITATION.cff  README.md  VERSION.txt  bootstrap  configure.ac  conftest.py  environment-3.12-linux-aarch64.yml  environment-3.12-linux.yml  environment-3.12-macos-x86_64.yml  environment-3.12-macos.yml  environment-3.12-win.yml  environment-3.13-linux-aarch64.yml  environment-3.13-linux.yml  environment-3.13-macos-x86_64.yml  environment-3.13-macos.yml  environment-3.13-win.yml  environment-3.14-linux-aarch64.yml  environment-3.14-linux.yml  environment-3.14-macos-x86_64.yml  environment-3.14-macos.yml  environment-3.14-win.yml  meson.build  pyproject.toml  tox.ini
.devcontainer/: onCreate-meson.sh
.github/: sync_labels.py
.github/workflows/: build.yml  ci-distro.yml  ci-meson.yml  ci.yml  doc-build-livedoc.yml  docker.yml  docker_hub.yml  merge-fixes.sh  release.yml  ruff.toml
docker/: Dockerfile
git-hooks/: pre-commit
m4/: sage_check_python_for_venv.m4  sage_python_package_check.m4
pkgs/sage-setup/: VERSION.txt
pkgs/sagemath-categories/: VERSION.txt
pkgs/sagemath-objects/: VERSION.txt
pkgs/sagemath-repl/: VERSION.txt
src/: meson.build
src/sage/: all.py  env.py  meson.build  (+1 more)
src/sage/libs/arb/: arith.pyx  meson.build
src/sage/schemes/hyperelliptic_curves/: all.py  constructor.py  hyperelliptic_finite_field.py  hyperelliptic_g2.py  hyperelliptic_generic.py  hyperelliptic_padic_field.py  hyperelliptic_rational_field.py  invariants.py  jacobian_endomorphism_utils.py  jacobian_g2_generic.py  jacobian_g2_homset_inert.py  jacobian_g2_homset_ramified.py  jacobian_g2_homset_split.py  jacobian_generic.py  jacobian_homset_generic.py  jacobian_homset_inert.py  jacobian_homset_ramified.py  jacobian_homset_split.py  jacobian_morphism.py  kummer_surface.py  meson.build  mestre.py  monsky_washnitzer.py
subprojects/: ecl.wrap
tools/: README.md  pre-commit  update-conda.py  update-meson.py
(+1660 files in other folders)
